fix - align css

--- a/1 - Simpsons (Reworked)/styles.css
+++ b/1 - Simpsons (Reworked)/styles.css
@@ -41,7 +41,7 @@
 /* Menu Sélection */
 
 .selectionButtons {
-    align: center;
+    text-align: center;
     padding: 1em;
     height: 40%;
     background-color: rgb(25, 167, 206);
